infrastructure/istio/istio-config.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: default
  namespace: bss-oss
spec:
  mtls:
    mode: STRICT
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: bss-api-policy
  namespace: bss-oss
spec:
  action: ALLOW
  rules:
    - from:
        - source:
            principals:
              - "cluster.local/ns/bss-oss/sa/api-gateway"
    - to:
        - operation:
            methods: ["GET", "POST", "PUT", "DELETE", "PATCH"]
